--- a/app/src/main/res/layout/list_item_business.xml
+++ b/app/src/main/res/layout/list_item_business.xml
@@ -1,85 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/layout_top_margin_card"
     android:minHeight="?android:attr/listPreferredItemHeight"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/businessImage"
         android:layout_width="match_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_marginTop="@dimen/layout_margin"
-            android:layout_marginLeft="@dimen/layout_margin"
-            android:layout_margin="@dimen/layout_margin"
-            android:id="@+id/businessImage"
-            android:layout_width="@dimen/image_repo_width"
-            android:layout_height="@dimen/image_repo_height"/>
+        android:layout_height="@dimen/image_rv_height"/>
 
-        <LinearLayout
-            android:layout_marginTop="@dimen/layout_margin"
-            android:layout_margin="@dimen/layout_margin"
+    <LinearLayout
+        android:layout_marginTop="@dimen/layout_margin"
+        android:layout_margin="@dimen/layout_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/businessName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/white"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/businessName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/black"/>
-
-            <TextView
-                android:id="@+id/businessAddress"
-                android:layout_width="match_parent"
+                android:id="@+id/businessCategory"
+                android:gravity="start"
+                android:layout_width="wrap_content"
+                android:textColor="@color/white"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/desciption_size"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="end">
 
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imageStar"
+                    android:src="@drawable/ic_star_white_18dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:id="@+id/businessCategory"
-                    android:gravity="start"
+                    android:id="@+id/businessRating"
                     android:layout_width="wrap_content"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/desciption_size"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="end">
-
-                    <ImageView
-                        android:id="@+id/imageStar"
-                        android:src="@drawable/ic_star_white_18dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <TextView
-                        android:id="@+id/businessRating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/desciption_size"/>
-
-                </LinearLayout>
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
-
-
-</android.support.v7.widget.CardView>
+</FrameLayout>
 
 
