--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FCFDFD</color>
+    <color name="colorPrimaryDark">#FCFDFD</color>
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
+    <color name="grey">#B6B6B6</color>
+
+    <color name="white">#FCFDFD</color>
+
 </resources>
