--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.MainActivity">
 
+
     <item
         android:id="@+id/mapsIcon"
         android:title="maps"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_map_black_36dp">
+        android:icon="@drawable/ic_map_black_24dp">
 
     </item>
+
+    <item
+        android:id="@+id/myLocationIcon"
+        android:title="myLocaation"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_my_location_black_24dp">
+
+    </item>
+
 </menu>
