--- a/app/src/main/res/layout/list_item_business.xml
+++ b/app/src/main/res/layout/list_item_business.xml
@@ -28,10 +28,11 @@
             android:gravity="center"
             android:textColor="@color/white"/>
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/businessCategory"
@@ -41,27 +42,21 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/desciption_size"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="end">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" • "
+                android:textColor="@color/white"/>
 
-                <ImageView
-                    android:id="@+id/imageStar"
-                    android:src="@drawable/ic_star_white_18dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/businessRating"
+                android:layout_width="wrap_content"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/desciption_size"/>
 
-                <TextView
-                    android:id="@+id/businessRating"
-                    android:layout_width="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/desciption_size"/>
+        </LinearLayout>
 
-            </LinearLayout>
-        </RelativeLayout>
     </LinearLayout>
 </FrameLayout>
 
