--- a/app/src/main/res/layout/list_item_business.xml
+++ b/app/src/main/res/layout/list_item_business.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:layout_width="match_parent"
+<FrameLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:minHeight="?android:attr/listPreferredItemHeight"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
         android:id="@+id/businessImage"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/image_rv_height"/>
+        android:layout_height="@dimen/image_rv_height"
+        android:background="@color/grey"/>
 
     <LinearLayout
         android:layout_marginTop="@dimen/layout_margin"
@@ -45,7 +46,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" • "
+                android:text="@string/bullet_symbol"
                 android:textColor="@color/white"/>
 
             <TextView
@@ -57,6 +58,15 @@
 
         </LinearLayout>
 
+        <io.techery.properratingbar.ProperRatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:prb_defaultRating="2"
+            app:prb_totalTicks="5"
+            app:prb_tickNormalDrawable="@drawable/ic_star_border_white_18dp"
+            app:prb_tickSelectedDrawable="@drawable/ic_star_white_18dp"/>
     </LinearLayout>
 </FrameLayout>
 
