--- a/app/src/main/res/layout/marker_window.xml
+++ b/app/src/main/res/layout/marker_window.xml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:background="@color/colorPrimary">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/businessName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:adjustViewBounds="true"
-            android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:id="@+id/title"
-            android:text="YES"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:textStyle="bold"/>
-        <TextView
-            android:text="NO"
-            android:id="@+id/snippet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10dp"/>
-    </LinearLayout>
+        android:fontFamily="sans-serif"
+        android:textColor="@color/black"/>
 
-</android.support.v7.widget.CardView>
+    <io.techery.properratingbar.ProperRatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:prb_defaultRating="2"
+        app:prb_totalTicks="5"
+        app:prb_symbolicTick="★"
+        app:prb_symbolicTickNormalColor="@color/grey"
+        app:prb_symbolicTickSelectedColor="@color/colorAccent"/>
+
+    <TextView
+        android:id="@+id/businessAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:fontFamily="sans-serif" />
+
+    <TextView
+        android:id="@+id/businessDistance"
+        android:layout_width="wrap_content"
+        android:textColor="@color/grey"
+        android:fontFamily="sans-serif"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/desciption_size"/>
+
+
+</LinearLayout>
