--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/mapsIcon"
-        android:title="maps"
+        android:title="@string/title_option_map"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_map_black_24dp">
 
@@ -14,10 +14,11 @@
 
     <item
         android:id="@+id/myLocationIcon"
-        android:title="myLocaation"
+        android:title="@string/title_option_location"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_my_location_black_24dp">
 
     </item>
+
 
 </menu>
