--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,4 +33,16 @@
 
     <dimen name="heading_text_size">22sp</dimen>
     <dimen name="heading_review_text_size">18sp</dimen>
+
+
+    <dimen name="title_vertical_margin">25dp</dimen>
+    <dimen name="title_horizontal_margin">20dp</dimen>
+    <dimen name="title_text_size">34sp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
+
 </resources>
