--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -17,6 +17,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-
+       AIzaSyAS5kZ5ol94gaDp6Hd6ZxQr4qVPSKOLqLM
     </string>
 </resources>
